--- a/landing/.gitignore
+++ b/landing/.gitignore
@@ -1,3 +1,4 @@
+# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -12,10 +13,6 @@ build/
 .env.local
 .env.production
 
-# IDE
-.vscode/
-.idea/
-
 # OS
 .DS_Store
 Thumbs.db
@@ -23,3 +20,8 @@ Thumbs.db
 # Logs
 logs
 *.log
+
+# VS Code - mantieni solo le configurazioni essenziali
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
