Add environment to deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Landing Page
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -20,9 +20,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
-      - name: Upload landing page
+      - name: Build static content
         run: |
-          # Copia il contenuto della landing page nella cartella di build
           mkdir -p ./_site
           cp -r ./landing/public/* ./_site/
           
@@ -32,8 +31,12 @@ jobs:
           path: './_site'
 
   deploy:
+    environment:  # AGGIUNGI QUESTA SEZIONE
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
