Trigger GitHub Pages deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Landing Page to GitHub Pages
 
 on:
   push:
@@ -14,24 +14,53 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      
+        with:
+          fetch-depth: 0
+
+      - name: Debug - Show repository structure
+        run: |
+          echo "Repository structure:"
+          ls -la
+          echo "Landing folder structure:"
+          ls -la landing/ || echo "No landing folder"
+          echo "Landing/public structure:"
+          ls -la landing/public/ || echo "No landing/public folder"
+
+      - name: Verify landing page files
+        run: |
+          if [ ! -d "landing/public" ]; then
+            echo "❌ ERROR: landing/public directory does not exist!"
+            exit 1
+          fi
+          
+          if [ ! -f "landing/public/index.html" ]; then
+            echo "❌ ERROR: index.html not found in landing/public/"
+            exit 1
+          fi
+          
+          echo "✅ Landing page files verified successfully"
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
-      - name: Build static content
+
+      - name: Build static site
         run: |
           mkdir -p ./_site
-          cp -r ./landing/public/* ./_site/
+          echo "Copying files from landing/public to _site..."
+          cp -r landing/public/* ./_site/
           
+          echo "Final _site contents:"
+          ls -la ./_site/
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: './_site'
 
   deploy:
-    environment:  # AGGIUNGI QUESTA SEZIONE
+    environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
